# log-arithmetic

./: .gitignore  CMakeLists.txt  LogBaseNumeration.cpp  LogBaseNumeration.h  main.cpp
include/: bitset.h  bitsetExtended.h  constexprMath.h  fixedpoint.h  lns.h
src/: main.cpp
